Review of only-authentication

--- a/only-authentication/rabbitmq.config
+++ b/only-authentication/rabbitmq.config
@@ -1,14 +1,14 @@
 [
     {rabbit, [
-      {auth_backends, [rabbit_auth_backend_ldap]}
+        {auth_backends, [rabbit_auth_backend_ldap]}
     ]},
     {rabbitmq_auth_backend_ldap, [
-        {servers,          [ "localhost"]  },
-        {user_dn_pattern,  "cn=${username},ou=People,dc=example,dc=com" },
+        {servers,          ["localhost"]},
+        {user_dn_pattern,  "cn=${username},ou=People,dc=example,dc=com"},
         {tag_queries, [
-            {administrator, {constant, false} },
-            {management,    {constant, true } }
+            {administrator, {constant, false}},
+            {management,    {constant, true }}
         ]},
-        {log, network}
+        {log, network_unsafe}
     ]}
 ].
