Explicitly configure tag queries

--- a/hierarchical-user-organization/rabbitmq.config
+++ b/hierarchical-user-organization/rabbitmq.config
@@ -9,8 +9,9 @@
         {dn_lookup_bind,      {"cn=admin,dc=example,dc=com", "admin"}},
         {tag_queries, [
             {administrator,   {constant, false}},
-            {management,      {constant, true }}
+            {management,      {constant, true}}
         ]},
+        {vhost_access_query,  {constant, true}},
         {log, network_unsafe}
     ]}
 ].
