Investigate unicode characters (non-ascii ones)

--- a/auth-and-authz/advanced.config
+++ b/auth-and-authz/advanced.config
@@ -3,7 +3,7 @@
         {auth_backends, [rabbit_auth_backend_ldap]}
     ]},
     {rabbitmq_auth_backend_ldap, [
-        {servers,               ["localhost"]},
+        {servers,               ["openldap"]},
         {user_dn_pattern,       "cn=${username},ou=People,dc=example,dc=com"},
         {other_bind,            {"cn=admin,dc=example,dc=com", "admin"}},
         {tag_queries, [
