--- a/auth-and-authz/advanced.config
+++ b/auth-and-authz/advanced.config
@@ -1,6 +1,7 @@
 [
     {rabbit, [
-        {auth_backends, [rabbit_auth_backend_ldap]}
+        {auth_backends, [rabbit_auth_backend_ldap]},
+        {log_levels, [{connection, debug}, {queue, debug}]}
     ]},
     {rabbitmq_auth_backend_ldap, [
         {servers,               ["openldap"]},
@@ -29,6 +30,23 @@
                     }}
                 ]},
                 {in_group, "cn=${name}-${permission},ou=${vhost},ou=env,dc=example,dc=com", "uniqueMember"}
+            ]}
+        },
+        {topic_access_query,
+            {for, [
+                {permission, write,
+                    {'or', [
+                        %% administrator can write to all topics
+                        {in_group, "cn=administrator, ou=${vhost}, ou=env, dc=example, dc=com", "uniqueMember"},
+                        %% users can only write to [project number].[customer number] from postalAddress
+                        {match, {string, "${routing_key}"}, {attribute, "${user_dn}", "uidNumber"}}
+                    ]}
+                },
+                {permission, read,
+                    {'or', [
+                        {constant, true}
+                    ]}
+                }
             ]}
         },
         {log, network}
